--- a/w4/main.css
+++ b/w4/main.css
@@ -18,3 +18,10 @@ a:visited {
 a:hover, a:active {
     color: #FFFF00;
 }
+
+table, tr, th, td, caption {
+    border: 1px solid#eee;
+    font-family: 'Courier New', Courier, monospace;
+    border-collapse: collapse;
+    padding: 0.5rem;
+}
