--- a/final/css/style.css
+++ b/final/css/style.css
@@ -94,6 +94,64 @@ table, tr, th, td {
     background-color: #191923;  
 }
 
+input[type=text],
+input[type=tel],
+input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #FF934F;
+    border-radius: 4px;
+    background-color: #DAF5FF;
+}
+
+input[type=text]:focus,
+input[type=tel]:focus,
+input[type=email]:focus {
+    border: 3px solid #59FFA0;
+    outline: none;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #FF934F;
+    border-radius: 4px;
+    background-color: #DAF5FF;
+    resize: none;
+  }
+
+  textarea:focus {
+    border: 3px solid #59FFA0;
+    outline: none;
+  }
+
+input, button {
+    font:inherit;
+}
+
+button[type=submit],
+button[type=reset] {
+    background-color: #59FFA0;
+    border: none;
+    color: #191923;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: 2px solid #FF934F;
+    border-radius: 4px;
+}
+
+button[type=submit]:focus,
+button[type=reset]:focus {
+    border: 3px solid #FFED65;
+    outline: none;
+}
+
 code {
     color: #FF934F;
 }
